guild: fix wrong color when user popout is open

--- a/discord.user.styl
+++ b/discord.user.styl
@@ -777,7 +777,9 @@
       colors: 0, 0, $darker;
       [class*="membersGroup-"] { opacity: 0.8; colors: $light, 0, 0; }
       [class*="activityText-"] { colors: $lighter, 0, 0; }
-      [class*="member-"]:hover [class*="content-"] { colors: 0, 0, $dark; }
+      [class*="member"][class*="-open"], [class*="member-"]:hover {
+         [class*="content-"] { colors: 0, 0, $dark; }
+      }
     }
 
     // * Search bar.
